--- a/src/css/partials/_common.scss
+++ b/src/css/partials/_common.scss
@@ -12,3 +12,15 @@
 	padding: 0;
 }
 
+body {
+	max-width: 900px;
+	margin: 4rem auto;
+	background: grey;
+	font-family: sans-Serif;
+}
+
+.main-content {
+	background: white;
+	padding: 1rem;
+	border-radius: 0.5rem;
+}
