--- a/src/css/_settings.scss
+++ b/src/css/_settings.scss
@@ -11,6 +11,9 @@ $accent-color:hotpink;
 
 $text-color:#303036;
 
+$white: #fff;
+$black: #000;
+
 
 
 /************
@@ -19,7 +22,7 @@ $text-color:#303036;
 
 $gutter:1rem;
 $header-height:100px;
-$inner-bound-width:42em;
+$inner-bound-width:62rem;
 
 
 
