--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -8,5 +8,10 @@
 
 @import "partials/common";
 @import "partials/typography";
+@import "partials/header";
+@import "partials/footer";
+
+@import "components/slider";
+@import "components/center-paragraph";
 
 
