--- a/src/css/partials/_common.scss
+++ b/src/css/partials/_common.scss
@@ -13,14 +13,35 @@
 }
 
 body {
-	max-width: 900px;
-	margin: 4rem auto;
 	background: grey;
 	font-family: sans-Serif;
+	margin-top: $header-height;
+	
+	display: flex;
+	flex-flow: column;
+	min-height: calc(100vh - #{$header-height});
 }
 
 .main-content {
 	background: white;
-	padding: 1rem;
-	border-radius: 0.5rem;
+	margin-bottom: auto;
+}
+
+@mixin inner-bound {
+	margin-left: auto;
+	margin-right: auto;
+	max-width: $inner-bound-width;
+}
+
+.inner-bound {
+	@include inner-bound;
+}
+
+.visualy-hidden {
+	display: block;
+	opacity: 0;
+	color: transparent;
+	width: 2px;
+	height: 2px;
+	margin: -1px;
 }
