--- a/src/css/_settings.scss
+++ b/src/css/_settings.scss
@@ -6,8 +6,8 @@
  * Colors *
  **********/
 
-$primary-color:firebrick;
-$accent-color:hotpink;
+$primary-color:#263E10;
+$accent-color:#F3EEE6;
 
 $text-color:#303036;
 
@@ -22,7 +22,7 @@ $black: #000;
 
 $gutter:1rem;
 $header-height:100px;
-$inner-bound-width:62rem;
+$inner-bound-width: 1320px;
 
 
 
