--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -7,11 +7,14 @@
 @import "libhalma/libhalma";
 
 @import "partials/common";
+@import "partials/webfonts";
 @import "partials/typography";
 @import "partials/header";
 @import "partials/footer";
 
 @import "components/slider";
 @import "components/center-paragraph";
+@import "components/main-grid";
+@import "components/divider";
 
 
