--- a/src/css/components/_slider.scss
+++ b/src/css/components/_slider.scss
@@ -1,22 +1,18 @@
 .slider {
 	margin-top: -$header-height;
+	max-width: 100vw;
+	overflow: hidden;
+	position: relative;
 
-	.slider__wrapper {
-		
-		figure {
-			height: 75vh;
-		}
-		
-		img {
-			display: block;
-			width: 100vw;
-			height: 100%;
-			object-fit: cover;
-			object-position: center;
-		}
-		
+	&__wrapper {
+		height: 75vh;
+		width: 100%;
+	}
+	
+	&__figure {
 		&::after {
 			content: '';
+			pointer-events: none;
 			width: 100%;
 			height: 75vh;
 			background-image: linear-gradient(transparent 50%, rgba($black, 0.7) 100%);
@@ -27,6 +23,73 @@
 			
 			top: 0;
 			left: 0;
+		}
+	}
+	
+	&__image {
+		display: block;
+		height: 75vh;
+		width: 100%;
+		object-fit: cover;
+		object-position: center;
+	}
+	
+	&__caption {
+		position: absolute;
+		z-index: 1;
+		bottom: $gutter * 6;
+		
+		display: flex;
+		width: 100%;
+	}
+	
+	&__article {
+		color: $white;
+		@include inner-bound;
+		max-width: $inner-bound-width;
+		padding-right: 25%;
+		
+		h2 {
+			font-family: 'Allura';
+			font-size: 3.7rem;
+			line-height: 1.42;
+		}
+	}
+
+	
+	.slick-dots {
+		z-index: 1;
+		position: absolute;
+		//background: green;
+		bottom: $gutter;
+		
+		li {
+			height: $gutter;
+			width: $gutter * 5;
+			max-width: 100vw / 5;
+			margin-left: $gutter/2;
+			margin-right: $gutter/2;
+			
+			button {
+				width: 100%;
+				height: 100%;
+				
+				border-bottom: $gutter/5*2 solid $white;
+				padding: 0;
+				margin: 0;
+
+				background: none;
+				color: transparent;
+				opacity: 0.5;
+
+				&::before, &::after {
+					display: none;
+				}
+			} 
+		}
+		
+		li.slick-active button {
+			opacity: 1;
 		}
 	}
 }
