--- a/src/css/partials/_common.scss
+++ b/src/css/partials/_common.scss
@@ -13,13 +13,20 @@
 }
 
 body {
-	background: grey;
-	font-family: sans-Serif;
+	// background: hotpink;
+	font-family: 'EBGaramond', Garamond, Serif;
+	font-variant-ligatures: common-ligatures;
 	margin-top: $header-height;
 	
 	display: flex;
 	flex-flow: column;
 	min-height: calc(100vh - #{$header-height});
+	
+	font-kerning: normal;
+	-webkit-font-kerning: normal;
+	font-smooth: always;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 .main-content {
@@ -28,9 +35,19 @@ body {
 }
 
 @mixin inner-bound {
-	margin-left: auto;
-	margin-right: auto;
-	max-width: $inner-bound-width;
+	margin-left: $gutter;
+	margin-right: $gutter;
+	
+	@include for-size(tablet-portrait-up) {
+		margin-left: $gutter*2;
+		margin-right: $gutter*2;
+	}
+	
+	@include for-size(desktop-up) {
+		margin-left: auto;
+		margin-right: auto;
+		max-width: $inner-bound-width;
+	}
 }
 
 .inner-bound {
@@ -44,4 +61,37 @@ body {
 	width: 2px;
 	height: 2px;
 	margin: -1px;
+}
+
+.image {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	object-position: center;
+}
+
+.stack {
+	display: flex;
+	flex-flow: column;
+
+	&__item {
+		margin-bottom: $gutter;
+	}
+}
+
+.tease {
+	color: $primary-color;
+	font-weight: 800;
+}
+
+a, button {
+	font-family: inherit;
+	font-weight: inherit;
+	text-decoration: none;
+	color: currentColor;
+	
+	&:hover {
+		cursor: pointer;
+		text-decoration: underline;
+	}
 }
