--- a/src/css/partials/_header.scss
+++ b/src/css/partials/_header.scss
@@ -1,6 +1,6 @@
 .main-header {
 	display: block;
-	background: rgba($white, 0.5);
+	background: rgba($white, 0.9);
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -25,15 +25,32 @@
 	}
 	
 	&__logo {
-		background: #ccc;
+		display: block;
+		padding: $gutter/2 $gutter/2 $gutter/2 0;
 		color: $white;
+		height: $header-height;
+		width: auto;
 	}
 }
 
 .side-nav {
-	width: $header-height/2;
-	height: $header-height/2;
-	border-radius: 50%;
-	border: 2px solid $black;
-	background: $white;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	
+	background: none;
+	border: none;
+	
+	span {
+		text-transform: uppercase;
+		font-size: 25px;
+		line-height: 0.8;
+		height: auto;
+		padding: 0 $gutter/2;
+	}
+	
+	svg {
+		height: $header-height/2;
+		width: $header-height/2;
+	}
 }
