--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -15,3 +15,4 @@
 @import "components/start_slider";
 @import "components/object_elements";
 @import "components/divider";
+@import "components/showcase";
