--- a/src/css/_settings.scss
+++ b/src/css/_settings.scss
@@ -6,8 +6,8 @@
  * Colors *
  **********/
 
-$primary-color: #D69400;
-$accent-color: #292929;
+$primary-color: #558b2f;
+$accent-color: #333333;
 $contrast-color: #FFFFFF;
 
 $error-color: #c61932;
