--- a/src/css/components/_object_elements.scss
+++ b/src/css/components/_object_elements.scss
@@ -37,6 +37,10 @@
 	}
 }
 
+.copy-text p {
+	@include text;
+}
+
 .main-content {
 	.object-element:first-of-type {
 		margin-top: var(--header-height);
